# Wsp-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  PLAN_WHATSAPP_AGENT.md  README.md  TODO_PRODUCTION.md  docker-compose.yml  package-lock.json  package.json
.cursor/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  MANIFEST.in  README.md  alembic.ini  openapi.json  pyproject.toml
apps/api/app/: config.py  deps.py  logging_setup.py  main.py  metrics.py  rate_limit.py
apps/api/app/agent/: gemini_agent.py  tool_handlers.py
apps/api/app/db/: session.py
apps/api/app/middleware/: correlation_id.py
apps/api/app/models/: __init__.py
apps/api/app/routers/: internal.py  workspace_settings.py
apps/api/app/services/: catalog_import.py  conversation.py  effective_settings.py  orchestrator.py  twilio_auth.py
apps/api/app/webhooks/: twilio_whatsapp.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 001_initial_schema.py
apps/api/scripts/: check_db.py  export_openapi.py
apps/api/tests/: conftest.py  test_correlation_id.py  test_deps.py  test_health.py  test_internal_status.py  test_logging_redaction.py  test_orchestrator.py  test_tool_handlers.py  test_webhook_twilio.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AppNav.tsx  AppTour.tsx  ChatShell.tsx  (+6 more)
scripts/: capture-readme-screens.mjs
supabase/migrations/: 20260512213420_wsp_agent_initial_schema.sql
(+34 files in other folders)
